--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,96 +2,57 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
-    - name: Date of Birth
-      value: 14th March 1879
+      value: Eric John McDermid
     - name: Languages
-      value: English, German
+      value: English (native), Biblical Hebrew, Biblical Greek
 
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+    - title:  MA-Old Testament (expected Spring 2026)
+      institution:  Columbia Theological Seminary, Decatur, GA
+      year:  "2024 - Present"
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
+        - "Thesis:  Dialogical Networks and the Psalms"
+        - "Advisor: William P. Brown"
+
+    - title: PhD-Computing Science
+      institution: University of Glasgow, Glasgow, UK
+      year: "2007 - 2011"
       description:
-        - Description 1.
-        - Description 2.
+        - "Thesis:  A structural approach to matching problems with preferences"
+        - "Advisor:  Robert W. Irving"
+
+    - title: MSc, BS-Computer Science
+      institution: University of Wisconsin-Milwaukee
+      year: "2001 - 2006"
 
 - title: Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
-      description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
-      description:
-        - Description 1.
-        - Description 2.
-
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
+    - title: Senior Machine Learning Engineer (ITC5)
+      institution: Apple, Inc, Austin, TX
+      year: 2013-2025
       description:
 
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
+    - title: Senior Research Scientist
+      institution: 21CT, Austin, TX
+      year: 2011-2013
+      description:
 
-- title: Open Source Projects
-  type: time_table
-  contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
+    - title: Research Scientist
+      institution: University of Wisconsin-Milwaukee
+      year: 2010-2011
 
 - title: Honors and Awards
   type: time_table
   contents:
-    - year: 1921
+    - year: 2016
       items:
-        - Nobel Prize in Physics
-        - Matteucci Medal
-    - year: 2029
+        - Above and Beyond Award (Apple Inc; for excellence in technical contributions)
+    - year: 2006
       items:
-        - Max Planck Medal
-
-- title: Academic Interests
-  type: nested_list
-  contents:
-    - title: Topic 1.
+        - Graduate Student Teaching Award (for excellence in teaching)
+    - year: 2005
       items:
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
-      items:
-        - Description 1.
-        - Description 2.
-
-- title: Other Interests
-  type: list
-  contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+        - Outstanding Student Award for Academics
